--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Расписание</title>
         <meta charset="utf-8" lang="ru">
-        <link rel = "stylesheet" type = "text/css" href = "../styles/style.css">
+        <link rel = "stylesheet" type = "text/css" href = "..\aaa.uxlabaserj.da\styles\style.css">
         <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script type="text/javascript" charset="utf-8" src="script.js"></script>
     </head>
