--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                     <div style="display: flex; flex-direction: row; flex-wrap: nowrap;">
                         <button class="addbtn">+</button>
                         <button class="delfbtn">-</button>
+                        <button class="printbtn">P</button>
                         </div>
                 </div>
                 <div class="tab" id="t2">
@@ -147,6 +148,7 @@
                     <div style="display: flex; flex-direction: row; flex-wrap: nowrap;">
                         <button class="addbtn">+</button>
                         <button class="delfbtn">-</button>
+                        <button class="printbtn">P</button>
                         </div>
                 </div>
                 <div class="tab" id="t3">
@@ -156,6 +158,7 @@
                     <div style="display: flex; flex-direction: row; flex-wrap: nowrap;">
                         <button class="addbtn">+</button>
                         <button class="delfbtn">-</button>
+                        <button class="printbtn">P</button>
                         </div>
                 </div>
                 <div class="tab" id="t4">
@@ -165,6 +168,7 @@
                     <div style="display: flex; flex-direction: row; flex-wrap: nowrap;">
                         <button class="addbtn">+</button>
                         <button class="delfbtn">-</button>
+                        <button class="printbtn">P</button>
                         </div>
                 </div>
                 <div class="tab" id="t5">
@@ -174,6 +178,7 @@
                     <div style="display: flex; flex-direction: row; flex-wrap: nowrap;">
                         <button class="addbtn">+</button>
                         <button class="delfbtn">-</button>
+                        <button class="printbtn">P</button>
                         </div>
                 </div>
                 <div class="tab" id="t6">
@@ -183,6 +188,7 @@
                     <div style="display: flex; flex-direction: row; flex-wrap: nowrap;">
                         <button class="addbtn">+</button>
                         <button class="delfbtn">-</button>
+                        <button class="printbtn">P</button>
                         </div>
                 </div>
                 <div class="tab" id="t7">
@@ -192,6 +198,7 @@
                     <div style="display: flex; flex-direction: row; flex-wrap: nowrap;">
                     <button class="addbtn">+</button>
                     <button class="delfbtn">-</button>
+                    <button class="printbtn">P</button>
                     </div>
                 </div>
             </div>
